--- a/testdata/config/valid/extend_base_1.toml
+++ b/testdata/config/valid/extend_base_1.toml
@@ -1,7 +1,7 @@
 title = "gitleaks extended 1"
 
 [extend]
-path="../../testdata/config/valid/extend_base_2.toml"
+path="../testdata/config/valid/extend_base_2.toml"
 
 [[rules]]
     description = "AWS Access Key"
