--- a/testdata/config/valid/extend_rule_override_description.toml
+++ b/testdata/config/valid/extend_rule_override_description.toml
@@ -1,7 +1,7 @@
 title = "override a built-in rule's description"
 
 [extend]
-path = "../../testdata/config/simple.toml"
+path = "../testdata/config/simple.toml"
 
 [[rules]]
 id = "aws-access-key"
