--- a/config/betterleaks.toml
+++ b/config/betterleaks.toml
@@ -2187,7 +2187,7 @@ regexes = [
 [[rules]]
 id = "gitea-access-token"
 description = "Detected a Gitea Access Token, which may expose self-hosted Git repositories and associated code to unauthorized access."
-regex = '''(?i)[\w.-]{0,50}?(?:gitea)(?:[ \t\w.-]{0,20})[\s'"]{0,3}(?:=|>|:{1,3}=|\|\||:|=>|\?=|,)[\x60'"\s=]{0,5}([a-f0-9]{40})(?:[\x60'"\s;]|\\[nr]|$)'''
+regex = '''(?i)[\w.-]{0,50}?(?:gitea[_.-]?(?:token|key|secret|access))(?:[ \t\w.-]{0,20})[\s'"]{0,3}(?:=|>|:{1,3}=|\|\||:|=>|\?=|,)[\x60'"\s=]{0,5}([a-f0-9]{40})(?:[\x60'"\s;]|\\[nr]|$)'''
 entropy = 3
 keywords = ["gitea"]
 
